Backend: Create county, settlement, institution